# defuddle-py

./: .gitignore  README.md  _diag.py  pyproject.toml  uv
.github/workflows/: ci.yml  publish.yml
skills/defuddle-py/: SKILL.md  skill.yaml
src/defuddle/: __init__.py  __main__.py  constants.py  content_patterns.py  defuddle.py  markdown.py  metadata.py  scoring.py  standardize.py  types.py
tests/: test_defuddle.py  test_fixtures.py
tests/expected/: code-blocks--chroma-linenums.md  code-blocks--hexo-br.md  codeblocks--chatgpt-codemirror.md  codeblocks--chroma-inline-linenums.md  codeblocks--chroma-line-spans.md  codeblocks--code-pre-nesting.md  codeblocks--flex-row-gutter.md  codeblocks--mintlify.md  codeblocks--react-syntax-highlighter-linenums.md  codeblocks--rehype-pretty-code.md  codeblocks--rehype-pretty-copy.md  codeblocks--rockthejvm.com-articles-kotlin-101-type-classes.md  codeblocks--rouge-linenums.md  codeblocks--stripe.md  comments--news.ycombinator.com-item-id=12345678.md  comments--old.reddit.com-r-test-comments-abc123-test_post.md  content-patterns--leading-breadcrumb.md  content-patterns--socket-dev-blog.md  content-patterns--trailing-related-posts.md  elements--bootstrap-alerts.md  elements--complex-tables.md  elements--data-table.md  elements--embedded-videos.md  elements--empty-p-br.md  elements--farsi-zwnj.md  elements--figure-content-wrapper.md  elements--javascript-links.md  elements--lazy-image.md  elements--nbsp-handling.md  elements--whitespace-newlines.md  extractor--bbcode-data.md  footnotes--aside-ol-start.md  footnotes--child-anchor-id.md  footnotes--heading-notes.md  footnotes--hidden-section.md  footnotes--hr-continuation.md  (+78 more)
(+135 files in other folders)
