[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "defuddle"
version = "0.1.0"
description = "Extract the main content from a web page using Python"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "beautifulsoup4>=0.4",
    "lxml>=5.0",
    "html2text>=2024.2",
    "pyld>=2.0",
    "httpx>=0.27",
    "markdownify>=1.2.2",
    "mathml-to-latex>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
defuddle = "defuddle.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/defuddle"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
